--- a/app/src/main/res/layout/fragment_budget_list_details.xml
+++ b/app/src/main/res/layout/fragment_budget_list_details.xml
@@ -8,7 +8,14 @@
     android:background="?attr/backgroundColor"
     >
 
-
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.6"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="?attr/backgroundImage" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/expense_recycler_view"
