--- a/app/src/main/res/layout/fragment_category_browser.xml
+++ b/app/src/main/res/layout/fragment_category_browser.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.6"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="?attr/backgroundImage" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/category_recycler_view"
         android:layout_width="match_parent"
