--- a/app/src/main/res/layout/fragment_edit_budget_list.xml
+++ b/app/src/main/res/layout/fragment_edit_budget_list.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundImage"
+    android:gravity="top"
+    >
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,7 +32,7 @@
             android:backgroundTint="?attr/toolbarColor"
             android:hint="@string/new_budget_list_name_hint"
             android:textColor="?attr/textColor"
-            android:textColorHint="?attr/toolbarColor"
+            android:textColorHint="?attr/hintTextColor"
             android:inputType="text"
             />
 
@@ -66,7 +69,7 @@
             android:hint="@string/new_budget_list_value_hint"
             android:textColor="?attr/textColor"
             android:inputType="numberDecimal"
-            android:textColorHint="?attr/toolbarColor" />
+            android:textColorHint="?attr/hintTextColor" />
 
         <Spinner
             android:id="@+id/edit_budget_list_currency_spinner"
