--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.6"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="?attr/backgroundImage" />
+
     <LinearLayout
         android:id="@+id/share_budget_list_search_linear_layout"
         android:layout_width="fill_parent"
