--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:background="?attr/backgroundColor">
 
+    <ImageView
+        android:id="@+id/background_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="1"
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:src="?attr/backgroundImage" />
+
     <EditText
         android:id="@+id/login_username_edit_text"
         android:layout_width="match_parent"
@@ -44,6 +53,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
         android:text="@string/login_action"
+        android:backgroundTint="?attr/buttonColor"
+        android:textColor="?attr/textColor"
         />
 
     <Button
@@ -55,7 +66,9 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
-        android:text="@string/register_action" />
+        android:text="@string/register_action"
+        android:backgroundTint="?attr/buttonColor"
+        android:textColor="?attr/textColor"/>
 
     <TextView
         android:id="@+id/login_error_message"
