--- a/app/src/main/res/layout/fragment_new_category.xml
+++ b/app/src/main/res/layout/fragment_new_category.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/backgroundColor">
+    android:background="?attr/backgroundImage"
+    android:gravity="top">
 
     <RelativeLayout
         android:layout_width="match_parent"
