--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,10 @@
     <color name="login_error_color">#D50C0C</color>
     <color name="darkCardBackgroundColor">#6C6A6A</color>
     <color name="darkCardSelectedBackgroundColor">#959292</color>
-    <color name="lightCardBackgroundColor">#CBF1E6</color>
-    <color name="lightCardSelectedBackgroundColor">#A1BFB7</color>
+    <color name="lightCardBackgroundColor">#9969BAC3</color>
+    <color name="lightCardSelectedBackgroundColor">#b1dddd</color>
     <color name="black_overlay">#66000000</color>
     <color name="disabled_button">#CACACA</color>
-</resources>
+    <color name="lightModeToolbarTextColor">#FFFFFF</color>
+    <color name="darkModeToolbarTextColor">#000000</color>
+    </resources>
