--- a/app/src/main/res/xml/authenticator.xml
+++ b/app/src/main/res/xml/authenticator.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
     android:accountType="engineer_degree"
-    android:icon="@drawable/ic_launcher_foreground"
+    android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
-    android:smallIcon="@drawable/ic_launcher_foreground"
+    android:smallIcon="@mipmap/ic_launcher"
     />
