--- a/app/src/main/res/layout/fragment_new_category.xml
+++ b/app/src/main/res/layout/fragment_new_category.xml
@@ -48,7 +48,9 @@
             android:layout_below="@id/new_category_icon_image_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/category_cancel_button"
             android:textColor="?attr/textColor" />
 
@@ -59,7 +61,9 @@
             android:layout_below="@id/new_category_icon_image_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/category_add_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
