--- a/app/src/main/res/layout/fragment_budget_list.xml
+++ b/app/src/main/res/layout/fragment_budget_list.xml
@@ -97,11 +97,11 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
-        android:gravity="bottom|center_horizontal"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="@string/budget_list_delete_button"
-        android:textAlignment="center"
         android:visibility="invisible"
-        android:backgroundTint="?attr/buttonColor"
+        android:background="@drawable/standard_button_background"
         />
 
 </RelativeLayout>
