--- a/app/src/main/res/layout/fragment_budget_list_details.xml
+++ b/app/src/main/res/layout/fragment_budget_list_details.xml
@@ -56,11 +56,12 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
-        android:gravity="bottom|center_horizontal"
         android:text="@string/budget_list_details_delete_button"
         android:textAlignment="center"
         android:visibility="invisible"
-        android:backgroundTint="?attr/buttonColor"
+        android:background="@drawable/standard_button_background"
+        android:gravity="center"
+        android:padding="10dp"
         />
 
 </RelativeLayout>
