--- a/app/src/main/res/layout/fragment_category_browser.xml
+++ b/app/src/main/res/layout/fragment_category_browser.xml
@@ -38,8 +38,9 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
-        android:backgroundTint="?attr/buttonColor"
-        android:gravity="bottom|center_horizontal"
+        android:background="@drawable/standard_button_background"
+        android:gravity="center"
+        android:padding="10dp"
         android:text="@string/category_delete_button"
         android:textAlignment="center"
         android:visibility="invisible" />
