--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -53,7 +53,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
         android:text="@string/login_action"
-        android:backgroundTint="?attr/buttonColor"
+        android:background="@drawable/standard_button_background"
+        android:gravity="center"
+        android:padding="10dp"
         android:textColor="?attr/textColor"
         />
 
@@ -67,7 +69,9 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="50dp"
         android:text="@string/register_action"
-        android:backgroundTint="?attr/buttonColor"
+        android:background="@drawable/standard_button_background"
+        android:gravity="center"
+        android:padding="10dp"
         android:textColor="?attr/textColor"/>
 
     <TextView
