--- a/app/src/main/res/layout/fragment_new_budget_list.xml
+++ b/app/src/main/res/layout/fragment_new_budget_list.xml
@@ -152,7 +152,9 @@
             android:layout_below="@id/new_budget_list_date_error_text_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/new_budget_list_cancel_button"
             android:textColor="?attr/textColor" />
 
@@ -163,7 +165,9 @@
             android:layout_below="@id/new_budget_list_date_error_text_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/new_budget_list_confirm_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
