--- a/app/src/main/res/layout/fragment_new_expense.xml
+++ b/app/src/main/res/layout/fragment_new_expense.xml
@@ -143,7 +143,9 @@
             android:layout_below="@id/new_expense_calendar_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/new_expense_list_cancel_button"
             android:textColor="?attr/textColor" />
 
@@ -154,7 +156,9 @@
             android:layout_below="@id/new_expense_calendar_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
-            android:backgroundTint="?attr/buttonColor"
+            android:background="@drawable/standard_button_background"
+            android:gravity="center"
+            android:padding="10dp"
             android:text="@string/new_expense_list_confirm_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
