--- a/app/src/main/res/layout/fragment_edit_budget_list.xml
+++ b/app/src/main/res/layout/fragment_edit_budget_list.xml
@@ -157,6 +157,7 @@
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/new_budget_list_cancel_button"
             android:textColor="?attr/textColor" />
 
@@ -170,6 +171,7 @@
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/edit_budget_list_confirm_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
