--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -51,6 +51,7 @@
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/category_cancel_button"
             android:textColor="?attr/textColor" />
 
@@ -64,6 +65,7 @@
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
+            android:layout_marginBottom="5dp"
             android:text="@string/category_edit_button"
             android:textColor="?attr/textColor" />
     </RelativeLayout>
