--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -37,6 +37,7 @@
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
+            android:layout_marginTop="5dp"
             android:text="@string/share_budget_list_search_button"
             android:textColor="?attr/textColor" />
     </LinearLayout>
