--- a/app/src/main/res/layout/fragment_new_expense.xml
+++ b/app/src/main/res/layout/fragment_new_expense.xml
@@ -143,6 +143,7 @@
             android:layout_below="@id/new_expense_calendar_view"
             android:layout_alignParentStart="true"
             android:layout_marginStart="10dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
@@ -156,6 +157,7 @@
             android:layout_below="@id/new_expense_calendar_view"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/standard_button_background"
             android:gravity="center"
             android:padding="10dp"
