-Added useful methods to DateUtils and CurrencyUtils -Added Exchange system and API interface to retrofit classes -Added new statistcs fragment showing monthly amount spent by user in chosen month. Also user can change currencies for live currency recalculation based on rates provided by Central European Bank -Several fixes

--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -11,15 +11,21 @@
             android:icon="@drawable/ic_people_black_24dp"
             android:title="@string/drawer_friends"
             />
+
         <item
-            android:id="@+id/drawer_settings"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/drawer_settings"
+            android:id="@+id/drawer_statistics"
+            android:icon="@drawable/ic_baseline_pie_chart_24"
+            android:title="@string/drawer_statistics"
             />
     </group>
     <group
         android:id="@+id/drawer_group_2"
         android:checkableBehavior="single">
+        <item
+            android:id="@+id/drawer_settings"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/drawer_settings"
+            />
         <item
             android:id="@+id/drawer_logout"
             android:icon="@drawable/ic_logout"
