--- a/app/src/main/res/layout/fragment_new_budget_list.xml
+++ b/app/src/main/res/layout/fragment_new_budget_list.xml
@@ -76,6 +76,8 @@
             android:layout_below="@+id/new_budget_list_amount_text_view"
             android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
+            android:minWidth="20dp"
+
             android:layout_marginEnd="10dp"
             android:layout_toEndOf="@+id/new_budget_list_amount_edit_text"
             android:spinnerMode="dropdown"
